Finish basic CSS/readme

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,2 +1,30 @@
 ** Test Integration of Braintree API into a rails 4 application **
-* Ruby version: 2.3.1
+
+
+# Instructions for setup
+
+**1. Set up your rails app. **
+- Navigate to the directory where you cloned the repo
+- Run 'bundle install' to set up requires gems
+
+**2. Create new Database and seed it with users and products.**
+- bundle exec rake db:create
+- bundle exec rake db:migrate
+- bundle exec rake db:seed
+
+**3. Create a .env file in root directory of application**
+- In the .env file make sure to set up environment variables for your braintree account:
+
+BT_PUBLIC_KEY=PublicKeyGoesHere
+BT_PRIVATE_KEY=PrivateKeyGoesHere
+BT_MERCHANT_ID=MerchantIDGoesHere
+
+**4. Run server
+- Rails s
+
+**5. Create account
+- Register a new user
+- Select items from the home page
+- Add items to your cart
+- From "My Cart", you can checkout using hosted field form
+- Any user that has checked out before will have a stored payment method and can checkout without re-entering their credentials
